# MyQtApp

./: Budget.cpp  Budget.h  CMakeLists.txt  CurrencyConverter.cpp  CurrencyConverter.h  DataBase.cpp  DataBase.h  MainWindow.cpp  MainWindow.h  SignWindow.cpp  SignWindow.h  Transaction.h  User.cpp  User.h  Validate.cpp  Validate.h  main.cpp  mainStyle.qss  main_project.qrc  main_project.rc  main_project.sln  main_project.vcxproj  main_project.vcxproj.filters  signStyle.qss
main_project/x64/Debug/: main_project.exe.recipe  vc143.idb
main_project/x64/Debug/main_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main_project.lastbuildstate  main_project.write.1u.tlog  moc.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
main_project/x64/Debug/qt/moc/: moc_MainWindow.cpp  moc_SignWindow.cpp
main_project/x64/Debug/qt/qmake/: .qmake.stash  qtvars.pro  qtvars.vcxproj
main_project/x64/Release/: main_project.exe.recipe  main_project.iobj  main_project.ipdb
main_project/x64/Release/main_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main_project.lastbuildstate  main_project.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rc.command.1.tlog  rc.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
(+8 files in other folders)
